// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root "
  role="group"
>
  <WithProviderContextComponent
    block={false}
    disabled={false}
    grouped={true}
    key=".0"
    label="One"
    priority="filled"
    size="medium"
  />
  <WithProviderContextComponent
    block={false}
    disabled={false}
    grouped={true}
    key=".1"
    label="Two"
    priority="filled"
    size="medium"
  />
</div>
`;

exports[`rendering renders correctly priority 1`] = `
<div
  className="root "
  role="group"
>
  <WithProviderContextComponent
    block={false}
    disabled={false}
    grouped={true}
    key=".0"
    label="One"
    priority="outline"
    size="medium"
  />
  <WithProviderContextComponent
    block={false}
    disabled={false}
    grouped={true}
    key=".1"
    label="Two"
    priority="outline"
    size="medium"
  />
</div>
`;

exports[`rendering renders correctly size 1`] = `
<div
  className="root "
  role="group"
>
  <WithProviderContextComponent
    block={false}
    disabled={false}
    grouped={true}
    key=".0"
    label="One"
    priority="filled"
    size="large"
  />
  <WithProviderContextComponent
    block={false}
    disabled={false}
    grouped={true}
    key=".1"
    label="Two"
    priority="filled"
    size="large"
  />
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root isRootBlock"
  role="group"
>
  <WithProviderContextComponent
    block={true}
    disabled={true}
    grouped={true}
    key=".0"
    label="One"
    priority="outline"
    size="small"
  />
  <WithProviderContextComponent
    block={true}
    disabled={true}
    grouped={true}
    key=".1"
    label="Two"
    priority="outline"
    size="small"
  />
</div>
`;
